fix cors issue with non auth end points